--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input class="numero" type="text" maxlength="2" value="00"><span>seg</span>
 
             </div> 
-            <div class="botones">
+            <div class="botones mt-3">
                 <button id="iniciar" onclick="iniciarTemporizador()"></button>
                 <button id="pausa" onclick="pausarTemporizador()"></button>
             </div>
